<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="appName">PlanningTable</string>
    <string name="AddTicketDataHere">Add Ticket data here !</string>
    <string name="action_settings">Settings</string>
    <string name="buttonAddNew">Add New</string>
    <string name="buttonSave">Save</string>
    <string name="PersonName">Person Name</string>
    <string name="PersonID">Person ID</string>
    <string name="Phone">Phone</string>
    <string name="Email">Email</string>
    <string name="Details">Details</string>
    <string name="buttonSearch">Search</string>
    <string name="buttonBack">Back</string>
    <string name="Search">Search</string>
    <string name="title_activity_activity_person_add">Add Person</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_activity_ticket_add">Add Ticket</string>
    <string name="Symptoms">Symptoms</string>
    <string name="TicketNumber">Ticket Number</string>
    <string name="Diagnoses">Diagnoses</string>
    <string name="buttonAddPerson">Add Person</string>
    <string name="AddPersonDataHere">Add Person data here !</string>

    
   	<string name="msg1">Delete this record?</string>
  
  	<string name="yes">Yes</string>
  	<string name="no">No</string> 
    
    
    
</resources>
