<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.pefhaw.planningtable.ActivityTicketAdd$PlaceholderFragment" >

    <TextView
        android:id="@+id/textViewMessages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AddTicketDataHere" />

    <EditText
        android:id="@+id/editTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewMessages"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/PersonName"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editTextTicketNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextPersonName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/TicketNumber"
        android:inputType="number" />

    <EditText
        android:id="@+id/editTextSymptoms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextTicketNumber"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:hint="@string/Symptoms"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/editTextDiagnoses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextSymptoms"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/Diagnoses"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/editTextDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextDiagnoses"
        android:layout_below="@+id/editTextDiagnoses"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/Details"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="1dp"
        android:onClick="buttonSaveClick"
        android:text="@string/buttonSave" />

    <Button
        android:id="@+id/buttonAddPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/buttonSave"
        android:layout_centerHorizontal="true"
        android:onClick="buttonAddPersonClick"
        android:text="@string/buttonAddPerson" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonAddPerson"
        android:layout_alignBottom="@+id/buttonAddPerson"
        android:layout_alignParentRight="true"
        android:layout_marginRight="1dp"
        android:onClick="buttonBackClick"
        android:text="@string/buttonBack" />

</RelativeLayout>
