<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/textPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/Search"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/buttonAddNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="29dp"
        android:onClick="buttonAddNewClick"
        android:text="@string/buttonAddNew" />

    <Button
        android:id="@+id/buttonSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonAddNew"
        android:layout_alignBottom="@+id/buttonAddNew"
        android:layout_marginLeft="32dp"
        android:layout_toRightOf="@+id/buttonAddNew"
        android:onClick="buttonSearchClick"
        android:text="@string/buttonSearch" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonAddNew"
        android:layout_alignLeft="@+id/textPersonName"
        android:layout_below="@+id/textPersonName" >

        <TextView
            android:id="@+id/textDetails"
            android:layout_width="276dp"
            android:layout_height="278dp" />

    </ScrollView>

</RelativeLayout>